[tool.poetry]
name = "udlbpythonnotebooks"
version = "0.1.0"
description = "Developing python notebooks for Understanding DeepLearning notebook"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.2"
ipykernel = "^6.29.5"
jupyterlab = "^4.3.4"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
nbval = "^0.11.0"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
